Fix some issues with scrolling tree logging https://bugs.webkit.org/show_bug.cgi?id=132762

Reviewed by Tim Horton.

Only dump viewport constraints when they change, and dump the primary layer on
scrolling nodes.

* Shared/Scrolling/RemoteScrollingCoordinatorTransaction.cpp:
(WebKit::RemoteScrollingTreeTextStream::dump): Dump the primary layer.

Canonical link: https://commits.webkit.org/150808@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@168562 268f45cc-cd09-0410-ab3c-d52691b4dbfc